--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
         <div class="container">
             <div class="grid">
                 <h2>Bem Vindo!</h2>
-                <h2 class="digitando">Eu sou Desenvolvedor Web e de aplicações para Desktop</h2>
+                <h2 class="digitando">Meu nome é Caio, e eu sou Desenvolvedor Web e de aplicações para Desktop</h2>
                 <p>Este site foi criado com intuito de servir como um Portifolio para a minha carreira como
                     Desenvolvedor</p>
                 <a href="#">Dowload CV</a>
@@ -60,10 +60,10 @@
                 <div class="sobre-info">
                     <p><i class="fa-solid fa-calendar-days"></i> 20/04/2023</p>
                     <p><i class="fa-solid fa-location-dot"></i> Umuarama-PR</p>
-                    <p><i class="fa-brands fa-whatsapp"></i> Unialfa</p>
+                    <p><i class="fa-sharp fa-solid fa-user-graduate"></i> Unialfa</p>
                     <p><i class="fa-solid fa-envelope"></i> caiogrechic50@gmail.com</p>
-                    <p><i class="fa-brands fa-whatsapp"></i> ------------</p>
-                    <p><i class="fa-solid fa-envelope"></i> ------------</p>
+                    <p><i class="fa-solid fa-briefcase"></i> Engendra</p>
+                    <p><i class="fa-solid fa-code"></i> Desenvolvedor Web</p>
                 </div>
             </div>
         </article>
