Começei o menu responsivo

--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
                 <li><a href="#contato">Contato</a></li>
             </ul>
         </nav>
+        <i class="fa-solid fa-bars"></i>
     </header>
 
     <section>
@@ -63,7 +64,7 @@
                     <p><i class="fa-sharp fa-solid fa-user-graduate"></i> Unialfa</p>
                     <p><i class="fa-solid fa-envelope"></i> caiogrechic50@gmail.com</p>
                     <p><i class="fa-solid fa-briefcase"></i> Engendra</p>
-                    <p><i class="fa-solid fa-code"></i> Desenvolvedor Web</p>
+                    <p><i class="fa-solid fa-code"></i> Desenvolvedor</p>
                 </div>
             </div>
         </article>
