--- a/index.html
+++ b/index.html
@@ -70,6 +70,57 @@
         </article>
     </main>
 
+    <section class="service">
+        <div class="sobre">
+            <h1>Sobre mim</h1>
+            <p>Perfil profissional - Tudo sobre mim</p>
+            <div class="botoes">
+                <span></span>
+                <span></span>
+                <span></span>
+            </div>
+        </div>
+        <div class="my-service">
+            <ul>
+                <li>
+                    <i class="fa-brands fa-html5"></i>
+                    <h3>HTML e CSS</h3>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Doloremque vel nihil ratione. Labore
+                        numquam ipsa sit eveniet itaque recusandae distinctio.</p>
+                </li>
+                <li>
+                    <i class="fa-brands fa-js"></i>
+                    <h3>Java Script</h3>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Doloremque vel nihil ratione. Labore
+                        numquam ipsa sit eveniet itaque recusandae distinctio.</p>
+                </li>
+                <li>
+                    <i class="fa-brands fa-angular"></i>
+                    <h3>Angular</h3>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Doloremque vel nihil ratione. Labore
+                        numquam ipsa sit eveniet itaque recusandae distinctio.</p>
+                </li>
+                <li>
+                    <i class="fa-brands fa-php"></i>
+                    <h3>PHP</h3>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Doloremque vel nihil ratione. Labore
+                        numquam ipsa sit eveniet itaque recusandae distinctio.</p>
+                </li>
+                <li>
+                    <i class="fa-solid fa-laptop-code"></i>
+                    <h3>Delphi</h3>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Doloremque vel nihil ratione. Labore
+                        numquam ipsa sit eveniet itaque recusandae distinctio.</p>
+                </li>
+                <li>
+                    <i class="fa-solid fa-database"></i>
+                    <h3>Oracle Database</h3>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Doloremque vel nihil ratione. Labore
+                        numquam ipsa sit eveniet itaque recusandae distinctio.</p>
+                </li>
+            </ul>
+        </div>
+    </section>
 
     <script src="js/script.js"></script>
 </body>
