Finalizei as seções

--- a/index.html
+++ b/index.html
@@ -16,14 +16,14 @@
     <header>
         <h1>Caio <span>Henrique</span></h1>
         <nav>
-            <ul>
+            <ul class="links">
                 <li><a href="#home">Home</a></li>
                 <li><a href="#sobre">Sobre</a></li>
                 <li><a href="#portifolio">Portifolio</a></li>
                 <li><a href="#contato">Contato</a></li>
             </ul>
+            <i class="fa-solid fa-bars"></i>
         </nav>
-        <i class="fa-solid fa-bars"></i>
     </header>
 
     <section>
@@ -43,7 +43,7 @@
         <article>
             <div class="sobre">
                 <h1>Sobre mim</h1>
-                <p>Perfil profissional - Tudo sobre mim</p>
+                <p>Perfil Pessoal - Tudo sobre mim</p>
                 <div class="botoes">
                     <span></span>
                     <span></span>
@@ -59,11 +59,13 @@
                         magni facilis reiciendis amet laboriosam quibusdam?</p>
                 </div>
                 <div class="sobre-info">
-                    <p><i class="fa-solid fa-calendar-days"></i> 20/04/2023</p>
+                    <p><i class="fa-solid fa-calendar-days"></i> 20/04/2003</p>
                     <p><i class="fa-solid fa-location-dot"></i> Umuarama-PR</p>
-                    <p><i class="fa-sharp fa-solid fa-user-graduate"></i> Unialfa</p>
+                    <p><a target="_blank" href="https://www.alfaumuarama.edu.br/fau/"><i
+                                class="fa-sharp fa-solid fa-user-graduate"></i> Unialfa (2022 - 2025)</a></p>
                     <p><i class="fa-solid fa-envelope"></i> caiogrechic50@gmail.com</p>
-                    <p><i class="fa-solid fa-briefcase"></i> Engendra</p>
+                    <p><a target="_blank" href="https://www.engendra.com.br/"><i class="fa-solid fa-briefcase"></i>
+                            Engendra</a></p>
                     <p><i class="fa-solid fa-code"></i> Desenvolvedor</p>
                 </div>
             </div>
@@ -72,8 +74,8 @@
 
     <section class="service">
         <div class="sobre">
-            <h1>Sobre mim</h1>
-            <p>Perfil profissional - Tudo sobre mim</p>
+            <h1>SKILLS</h1>
+            <p>Tecnologias que eu possuo certo conhecimento</p>
             <div class="botoes">
                 <span></span>
                 <span></span>
@@ -114,10 +116,41 @@
                 </li>
                 <li>
                     <i class="fa-solid fa-database"></i>
-                    <h3>Oracle Database</h3>
+                    <h3>Oracle Database / MySql</h3>
                     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Doloremque vel nihil ratione. Labore
                         numquam ipsa sit eveniet itaque recusandae distinctio.</p>
                 </li>
+            </ul>
+        </div>
+    </section>
+
+    <section class="projects">
+        <div class="sobre">
+            <h1>SKILLS</h1>
+            <p>Tecnologias que eu possuo certo conhecimento</p>
+            <div class="botoes">
+                <span></span>
+                <span></span>
+                <span></span>
+            </div>
+        </div>
+        <div class="projects-models">
+            <ul>
+                <li>Todos</li>
+                <li>Projetos Pessoais</li>
+                <li>Projetos Faculdade</li>
+                <li>Projetos para Treino</li>
+            </ul>
+        </div>
+        <div class="my-projects">
+            <ul>
+                <li><a target="_blank" href="https://github.com/caio1459/Projeto_Google_Glass"><img src="images/img_3.png" alt="Projeto Google Glass"></a></li>
+                <li><a target="_blank" href="https://github.com/caio1459/crudAngular"><img src="images/img_3.png" alt="Crud feito em Angular"></a></li>
+                <li><a target="_blank" href="https://github.com/caio1459/landing-page"><img src="images/img_3.png" alt="landing-page"></a></li>
+                <li><a target="_blank" href="https://github.com/caio1459/Site_BK"><img src="images/img_3.png" alt="Site BK"></a></li>
+                <li><a target="_blank" href="https://github.com/caio1459/vitrine-esqueleto"><img src="images/img_3.png" alt="Vitrine Esqueleto"></a></li>
+                <li><a target="_blank" href="https://github.com/caio1459/site_portifolio"><img src="images/img_3.png" alt="Site Portifolio"></a></li>
+                
             </ul>
         </div>
     </section>
