Terminei o layout do site

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
         </nav>
     </header>
 
-    <section>
+    <section id="home">
         <div class="container">
             <div class="grid">
                 <h2>Bem Vindo!</h2>
@@ -40,120 +40,141 @@
     </section>
 
     <main>
-        <article>
+        <section id="sobre">
+            <article>
+                <div class="sobre">
+                    <h1>Sobre mim</h1>
+                    <p>Perfil Pessoal - Tudo sobre mim</p>
+                    <div class="botoes">
+                        <span></span>
+                        <span></span>
+                        <span></span>
+                    </div>
+                </div>
+                <img src="images/portifolio.png" alt="Imformações para o Portifolio">
+                <div class="sobre-conteudo">
+                    <div class="sobre-texto">
+                        <h1>Meu nome é Caio Henrique!</h1>
+                        <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Nihil, quisquam. Nulla numquam
+                            ullam rem quas eum quae sunt laudantium perspiciatis, officiis cupiditate ratione aspernatur
+                            magni facilis reiciendis amet laboriosam quibusdam?</p>
+                    </div>
+                    <div class="sobre-info">
+                        <p><i class="fa-solid fa-calendar-days"></i> 20/04/2003</p>
+                        <p><i class="fa-solid fa-location-dot"></i> Umuarama-PR</p>
+                        <p><a target="_blank" href="https://www.alfaumuarama.edu.br/fau/"><i
+                                    class="fa-sharp fa-solid fa-user-graduate"></i> Unialfa (2022 - 2025)</a></p>
+                        <p><i class="fa-solid fa-envelope"></i> caiogrechic50@gmail.com</p>
+                        <p><a target="_blank" href="https://www.engendra.com.br/"><i class="fa-solid fa-briefcase"></i>
+                                Engendra</a></p>
+                        <p><i class="fa-solid fa-code"></i> Desenvolvedor</p>
+                    </div>
+                </div>
+            </article>
+        </section>
+
+
+        <section class="service">
             <div class="sobre">
-                <h1>Sobre mim</h1>
-                <p>Perfil Pessoal - Tudo sobre mim</p>
+                <h1>SKILLS</h1>
+                <p>Tecnologias que eu possuo certo conhecimento</p>
                 <div class="botoes">
                     <span></span>
                     <span></span>
                     <span></span>
                 </div>
             </div>
-            <img src="images/portifolio.png" alt="Imformações para o Portifolio">
-            <div class="sobre-conteudo">
-                <div class="sobre-texto">
-                    <h1>Meu nome é Caio Henrique!</h1>
-                    <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Nihil, quisquam. Nulla numquam
-                        ullam rem quas eum quae sunt laudantium perspiciatis, officiis cupiditate ratione aspernatur
-                        magni facilis reiciendis amet laboriosam quibusdam?</p>
-                </div>
-                <div class="sobre-info">
-                    <p><i class="fa-solid fa-calendar-days"></i> 20/04/2003</p>
-                    <p><i class="fa-solid fa-location-dot"></i> Umuarama-PR</p>
-                    <p><a target="_blank" href="https://www.alfaumuarama.edu.br/fau/"><i
-                                class="fa-sharp fa-solid fa-user-graduate"></i> Unialfa (2022 - 2025)</a></p>
-                    <p><i class="fa-solid fa-envelope"></i> caiogrechic50@gmail.com</p>
-                    <p><a target="_blank" href="https://www.engendra.com.br/"><i class="fa-solid fa-briefcase"></i>
-                            Engendra</a></p>
-                    <p><i class="fa-solid fa-code"></i> Desenvolvedor</p>
+            <div class="my-service">
+                <ul>
+                    <li>
+                        <i class="fa-brands fa-html5"></i>
+                        <h3>HTML e CSS</h3>
+                        <p>Conhecimento intermediario em HTML e CSS no para desenvolvimento front-end</p>
+                    </li>
+                    <li>
+                        <i class="fa-brands fa-js"></i>
+                        <h3>Java Script</h3>
+                        <p>Conhecimento intermediario em Java Script para desenvolvimento no front-end</p>
+                    </li>
+                    <li>
+                        <i class="fa-brands fa-angular"></i>
+                        <h3>Angular</h3>
+                        <p>Desenvolvo em Angular para a criação de aplicações para Web</p>
+                    </li>
+                    <li>
+                        <i class="fa-brands fa-php"></i>
+                        <h3>PHP</h3>
+                        <p>Conhecimento em PHP na criação de sites dinâmicos</p>
+                    </li>
+                    <li>
+                        <i class="fa-solid fa-laptop-code"></i>
+                        <h3>Delphi</h3>
+                        <p>Desenvolvo em Delphi para aplicações em Desktop</p>
+                    </li>
+                    <li>
+                        <i class="fa-solid fa-database"></i>
+                        <h3>Oracle Database / MySql</h3>
+                        <p>Conhecimento em banco de dados Oraclo e MySql</p>
+                    </li>
+                </ul>
+            </div>
+        </section>
+
+        <section class="projects" id="portifolio">
+            <div class="sobre">
+                <h1>Projetos</h1>
+                <p>Algums projetos desenvolvidos</p>
+                <div class="botoes">
+                    <span></span>
+                    <span></span>
+                    <span></span>
                 </div>
             </div>
-        </article>
+            <div class="projects-models">
+                <ul>
+                    <li>Todos</li>
+                    <li>Projetos Pessoais</li>
+                    <li>Projetos Faculdade</li>
+                    <li>Projetos para Treino</li>
+                </ul>
+            </div>
+            <div class="my-projects">
+                <ul>
+                    <li><a target="_blank" href="https://github.com/caio1459/Projeto_Google_Glass"><img
+                                src="images/google-glass.png" alt="Projeto Google Glass"></a></li>
+                    <li><a target="_blank" href="https://github.com/caio1459/crudAngular"><img
+                                src="images/crud_angular.png" alt="Crud feito em Angular"></a></li>
+                    <li><a target="_blank" href="https://github.com/caio1459/landing-page"><img
+                                src="images/landing-page.png" alt="landing-page"></a></li>
+                    <li><a target="_blank" href="https://github.com/caio1459/Site_BK"><img src="images/site-bk.png"
+                                alt="Site BK"></a></li>
+                    <li><a target="_blank" href="https://github.com/caio1459/vitrine-esqueleto"><img
+                                src="images/vitrine-esqueleto.png" alt="Vitrine Esqueleto"></a></li>
+                    <li><a target="_blank" href="https://github.com/caio1459/site_portifolio"><img
+                                src="images/site_portifolio.png" alt="Site Portifolio"></a></li>
+                </ul>
+            </div>
+        </section>
     </main>
 
-    <section class="service">
+    <footer id="contato">
         <div class="sobre">
-            <h1>SKILLS</h1>
-            <p>Tecnologias que eu possuo certo conhecimento</p>
-            <div class="botoes">
-                <span></span>
-                <span></span>
-                <span></span>
-            </div>
+            <h1>Entre em Contato</h1>
         </div>
-        <div class="my-service">
-            <ul>
-                <li>
-                    <i class="fa-brands fa-html5"></i>
-                    <h3>HTML e CSS</h3>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Doloremque vel nihil ratione. Labore
-                        numquam ipsa sit eveniet itaque recusandae distinctio.</p>
-                </li>
-                <li>
-                    <i class="fa-brands fa-js"></i>
-                    <h3>Java Script</h3>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Doloremque vel nihil ratione. Labore
-                        numquam ipsa sit eveniet itaque recusandae distinctio.</p>
-                </li>
-                <li>
-                    <i class="fa-brands fa-angular"></i>
-                    <h3>Angular</h3>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Doloremque vel nihil ratione. Labore
-                        numquam ipsa sit eveniet itaque recusandae distinctio.</p>
-                </li>
-                <li>
-                    <i class="fa-brands fa-php"></i>
-                    <h3>PHP</h3>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Doloremque vel nihil ratione. Labore
-                        numquam ipsa sit eveniet itaque recusandae distinctio.</p>
-                </li>
-                <li>
-                    <i class="fa-solid fa-laptop-code"></i>
-                    <h3>Delphi</h3>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Doloremque vel nihil ratione. Labore
-                        numquam ipsa sit eveniet itaque recusandae distinctio.</p>
-                </li>
-                <li>
-                    <i class="fa-solid fa-database"></i>
-                    <h3>Oracle Database / MySql</h3>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Doloremque vel nihil ratione. Labore
-                        numquam ipsa sit eveniet itaque recusandae distinctio.</p>
-                </li>
+        <nav>
+            <ul class="sociais">
+                <li><a target="_blank" href=https://www.instagram.com/cayo_henri /><i
+                        class="fa-brands fa-instagram"></i></a></li>
+                <li><a target="_blank" href="https://www.linkedin.com/in/caio-henrique-67a050244/"><i
+                            class="fa-brands fa-linkedin"></i></a></li>
+                <li><a target="_blank" href="https://mail.google.com/mail/"><i
+                            class="fa-solid fa-envelope"></i></a></li>
+                            <li><a target="_blank" href="https://github.com/caio1459"><i
+                                class="fa-brands fa-github"></i></a></li>
             </ul>
-        </div>
-    </section>
-
-    <section class="projects">
-        <div class="sobre">
-            <h1>SKILLS</h1>
-            <p>Tecnologias que eu possuo certo conhecimento</p>
-            <div class="botoes">
-                <span></span>
-                <span></span>
-                <span></span>
-            </div>
-        </div>
-        <div class="projects-models">
-            <ul>
-                <li>Todos</li>
-                <li>Projetos Pessoais</li>
-                <li>Projetos Faculdade</li>
-                <li>Projetos para Treino</li>
-            </ul>
-        </div>
-        <div class="my-projects">
-            <ul>
-                <li><a target="_blank" href="https://github.com/caio1459/Projeto_Google_Glass"><img src="images/img_3.png" alt="Projeto Google Glass"></a></li>
-                <li><a target="_blank" href="https://github.com/caio1459/crudAngular"><img src="images/img_3.png" alt="Crud feito em Angular"></a></li>
-                <li><a target="_blank" href="https://github.com/caio1459/landing-page"><img src="images/img_3.png" alt="landing-page"></a></li>
-                <li><a target="_blank" href="https://github.com/caio1459/Site_BK"><img src="images/img_3.png" alt="Site BK"></a></li>
-                <li><a target="_blank" href="https://github.com/caio1459/vitrine-esqueleto"><img src="images/img_3.png" alt="Vitrine Esqueleto"></a></li>
-                <li><a target="_blank" href="https://github.com/caio1459/site_portifolio"><img src="images/img_3.png" alt="Site Portifolio"></a></li>
-                
-            </ul>
-        </div>
-    </section>
+        </nav>
+        <p>Produzido por Caio Henrique&copy; - 2023</p>
+    </footer>
 
     <script src="js/script.js"></script>
 </body>
