--- a/index.html
+++ b/index.html
@@ -55,9 +55,10 @@
                 <div class="sobre-conteudo">
                     <div class="sobre-texto">
                         <h1>Meu nome é Caio Henrique!</h1>
-                        <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Nihil, quisquam. Nulla numquam
-                            ullam rem quas eum quae sunt laudantium perspiciatis, officiis cupiditate ratione aspernatur
-                            magni facilis reiciendis amet laboriosam quibusdam?</p>
+                        <p>
+                            Meu o objetivo é crescer no mercado de trabalho de desenvolvimento , buscando sempre evoluir
+                            e agregar a empresa o que for necessário para me tornar o melhor profissional.
+                        </p>
                     </div>
                     <div class="sobre-info">
                         <p><i class="fa-solid fa-calendar-days"></i> 20/04/2003</p>
@@ -107,14 +108,29 @@
                         <p>Conhecimento em PHP na criação de sites dinâmicos</p>
                     </li>
                     <li>
-                        <i class="fa-solid fa-laptop-code"></i>
-                        <h3>Delphi</h3>
-                        <p>Desenvolvo em Delphi para aplicações em Desktop</p>
+                        <i class="fa-brands fa-react"></i>
+                        <h3>React</h3>
+                        <p>Conhecimento intermediario em React para criação de interfaces</p>
                     </li>
                     <li>
                         <i class="fa-solid fa-database"></i>
                         <h3>Oracle Database / MySql</h3>
                         <p>Conhecimento em banco de dados Oraclo e MySql</p>
+                    </li>
+                    <li>
+                        <i class="fa-brands fa-golang"></i>
+                        <h3>Golang</h3>
+                        <p>Experiência em Golang para criação de APIS</p>
+                    </li>
+                    <li>
+                        <i class="fa-brands fa-node"></i>
+                        <h3>Node</h3>
+                        <p>Experiência em node para criação de APIS</p>
+                    </li>
+                    <li>
+                        <i class="fa-brands fa-git-alt"></i>
+                        <h3>Git e GitHub</h3>
+                        <p>Conhecimento em Git e GitHub para versionamento de projetos</p>
                     </li>
                 </ul>
             </div>
@@ -140,18 +156,46 @@
             </div>
             <div class="my-projects">
                 <ul>
-                    <li><a target="_blank" href="https://github.com/caio1459/Projeto_Google_Glass"><img
-                                src="images/google-glass.png" alt="Projeto Google Glass"></a></li>
-                    <li><a target="_blank" href="https://github.com/caio1459/crudAngular"><img
-                                src="images/crud_angular.png" alt="Crud feito em Angular"></a></li>
-                    <li><a target="_blank" href="https://github.com/caio1459/landing-page"><img
-                                src="images/landing-page.png" alt="landing-page"></a></li>
-                    <li><a target="_blank" href="https://github.com/caio1459/Site_BK"><img src="images/site-bk.png"
-                                alt="Site BK"></a></li>
-                    <li><a target="_blank" href="https://github.com/caio1459/vitrine-esqueleto"><img
-                                src="images/vitrine-esqueleto.png" alt="Vitrine Esqueleto"></a></li>
-                    <li><a target="_blank" href="https://github.com/caio1459/site_portifolio"><img
-                                src="images/site_portifolio.png" alt="Site Portifolio"></a></li>
+                    <li>
+                        <a target="_blank" href="https://github.com/caio1459/Projeto_Google_Glass">
+                            <img src="images/google-glass.png" alt="Projeto Google Glass">
+                        </a>
+                    </li>
+                    <li>
+                        <a target="_blank" href="https://github.com/caio1459/projeto_momentos">
+                            <img src="images/momentos.png" alt="Projeto Momentos">
+                        </a>
+                    </li>
+                    <li>
+                        <a target="_blank" href="https://github.com/caio1459/landing-page">
+                            <img src="images/landing-page.png" alt="landing-page">
+                        </a>
+                    </li>
+                    <li>
+                        <a target="_blank" href="https://github.com/caio1459/Site_BK">
+                            <img src="images/site-bk.png" alt="Site BK">
+                        </a>
+                    </li>
+                    <li>
+                        <a target="_blank" href="https://github.com/caio1459/vitrine-esqueleto">
+                            <img src="images/vitrine-esqueleto.png" alt="Vitrine Esqueleto">
+                        </a>
+                    </li>
+                    <li>
+                        <a target="_blank" href="https://github.com/caio1459/site_portifolio">
+                            <img src="images/site_portifolio.png" alt="Site Portifolio">
+                        </a>
+                    </li>
+                    <li>
+                        <a target="_blank" href="https://github.com/caio1459/clone-spotify">
+                            <img src="images/clone-spotify.png" alt="Clone Spotify">
+                        </a>
+                    </li>
+                    <li>
+                        <a target="_blank" href="https://github.com/caio1459/devbook">
+                            <img src="images/devbook.png" alt="Devbook">
+                        </a>
+                    </li>
                 </ul>
             </div>
         </section>
@@ -167,10 +211,9 @@
                         class="fa-brands fa-instagram"></i></a></li>
                 <li><a target="_blank" href="https://www.linkedin.com/in/caio-henrique-67a050244/"><i
                             class="fa-brands fa-linkedin"></i></a></li>
-                <li><a target="_blank" href="https://mail.google.com/mail/"><i
-                            class="fa-solid fa-envelope"></i></a></li>
-                            <li><a target="_blank" href="https://github.com/caio1459"><i
-                                class="fa-brands fa-github"></i></a></li>
+                <li><a target="_blank" href="https://mail.google.com/mail/"><i class="fa-solid fa-envelope"></i></a>
+                </li>
+                <li><a target="_blank" href="https://github.com/caio1459"><i class="fa-brands fa-github"></i></a></li>
             </ul>
         </nav>
         <p>Produzido por Caio Henrique&copy; - 2023</p>
